# saarthi-cli

./: .gitignore  PYTHON_3_13_FEATURES_SUMMARY.md  README.md  RELEASE_NOTES.md  chatbot.py  install.sh  main.py  providers.py  pyproject.toml
.github/workflows/: publish.yml
skills/: humanizer.md
src/chatbot_cli/: __init__.py  __main__.py  app.py  app_config.py  chatbot.py  clipboard.py  formatting.py  mcp_client.py  memory.py  providers.py  sessions.py  settings.py  streaming.py  tool.py  ui.py
