[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-cli"
version = "0.1.0"
description = "Terminal chatbot with LangGraph memory and multiple model providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.18",
    "langchain-mistralai>=1.1.4",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "typing>=3.10.0.0",
]

[project.scripts]
chatbot-cli = "chatbot_cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]
