[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saarthi-cli"
version = "0.1.1"
description = "Your AI copilot in the terminal - a LangGraph-powered CLI chatbot with long-term memory"
readme = "README.md"
requires-python = ">=3.12"

license = { text = "Apache-2.0" }

authors = [
    { name = "Snehangshu Bhuin", email = "snehangshu.dev@gmail.com" }
]

keywords = [
    "ai",
    "chatbot",
    "cli",
    "langgraph",
    "terminal"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiosqlite>=0.22.1",
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "python-dotenv>=1.1.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=1.27.1",
    "prompt-toolkit>=3.0.52",
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "wikipedia>=1.4.0",
    "langchain-mistralai>=1.1.4",
]

[project.scripts]
saarthi = "chatbot_cli.app:main"

[project.urls]
Homepage = "https://github.com/snehangshu2002/saarthi-cli"
Repository = "https://github.com/snehangshu2002/saarthi-cli"
Documentation = "https://github.com/snehangshu2002/saarthi-cli#readme"
Issues = "https://github.com/snehangshu2002/saarthi-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
